--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <div class="container">
     <h1>Welcome to News App (Total <span id="resultCount"></span> Results)</h1>
 
-    <div class="spinner-border text-primary" role="status">
+    <!-- <div class="spinner-border text-primary" role="status">
       <span class="visually-hidden">Loading...</span>
-    </div>
+    </div> -->
 
     <div class="row content"></div>
 
